--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,8 +16,8 @@ steps:
     mavenOptions: '-Xmx3072m'
 - task: CopyFiles@2
   inputs:
-    SourceFolder: '/home/vsts/work/1/s/target/piggy-0.0.1-SNAPSHOT.jar'
-    Contents: '**'
+    SourceFolder: '$(Agent.BuildDirectory)'
+    Contents: '**/target/**/piggy-0.0.1-SNAPSHOT.jar'
     TargetFolder: '$(Build.ArtifactStagingDirectory)'
 - task: PublishBuildArtifacts@1
   inputs:
