--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,16 @@
+
+# Maven
+# Build your Java project and run tests with Apache Maven.
+# Add steps that analyze code, save build artifacts, deploy, and more:
+# https://docs.microsoft.com/azure/devops/pipelines/languages/java
+
+trigger:
+- dev
+
+pool:
+  vmImage: 'ubuntu-latest'
+
+steps:
 - task: Maven@3
   inputs:
     mavenPomFile: 'pom.xml'
