--- a/pom.xml
+++ b/pom.xml
@@ -56,14 +56,9 @@
       <scope>runtime</scope>
     </dependency>
     <dependency>
-      <groupId>com.alibaba</groupId>
-      <artifactId>fastjson</artifactId>
-      <version>1.2.58</version>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.cloud</groupId>
-      <artifactId>spring-cloud-starter-oauth2</artifactId>
-      <scope>compile</scope>
+      <groupId>org.apache.shiro</groupId>
+      <artifactId>shiro-spring</artifactId>
+      <version>1.4.0</version>
     </dependency>
   </dependencies>
   <build>
@@ -76,13 +71,7 @@
   </build>
   <dependencyManagement>
     <dependencies>
-      <dependency>
-        <groupId>org.springframework.cloud</groupId>
-        <artifactId>spring-cloud-dependencies</artifactId>
-        <version>Greenwich.SR1</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
+      
     </dependencies>
   </dependencyManagement>
 </project>
