--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,33 @@
     </dependency>
   </dependencies>
   <build>
+<!-- 如果不添加此节点mybatis的mapper.xml文件都会被漏掉。 -->
+<!-- https://www.jianshu.com/p/836d455663da -->
+  <resources>
+      <resource>
+          <directory>src/main/java</directory>
+          <includes>
+              <include>**/*.yml</include>
+              <include>**/*.properties</include>
+              <include>**/*.xml</include>
+          </includes>
+          <filtering>true</filtering>
+      </resource>
+      <resource>
+          <directory>src/main/resources</directory>
+          <includes>
+              <include>**/*.yml</include>
+              <include>**/*.properties</include>
+              <include>**/*.xml</include>
+          </includes>
+          <filtering>true</filtering>
+      </resource>
+  </resources>
+
+
+
+
+
     <plugins>
       <plugin>
         <groupId>org.springframework.boot</groupId>
