第一次合作结束

--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,32 @@
       <artifactId>shiro-spring</artifactId>
       <version>1.2.5</version>
     </dependency>
+   
+
+ <!-- https://mvnrepository.com/artifact/org.apache.poi/poi -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi</artifactId>
+      <version>3.17</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml -->
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml</artifactId>
+      <version>3.17</version>
+    </dependency>
+
+  
+
+
+
+
+
+
+
+
+
+
   </dependencies>
   <build>
 <!-- 如果不添加此节点mybatis的mapper.xml文件都会被漏掉。 -->
